[tool.poetry]
name = "AI_Story_Generator"
version = "0.1.0"
description = ""
authors = ["A-Memory <purelylegacy@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
flet = "^0.28.3"
lmstudio = "^1.3.1"
numpy = "^2.2.6"
hypercorn = "^0.17.3"
fastapi = "^0.115.12"
pydantic = "^2.11.5"
uvicorn = "^0.34.3"
watchfiles = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
